--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.baseurl }}" class="btn">Home</a>
         <a href="{{ site.github.page2 }}" class="btn">page2</a>
+        <a href="{{ site.github.page3 }}" class="btn">page3</a>
      {% endif %}
      
      {% if site.show_downloads %}
