--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,13 @@
         <a href="{{ site.baseurl }}" class="btn">Home</a>
         <a href="{{ site.github.page2 }}" class="btn">page2</a>
         <a href="{{ site.github.page3 }}" class="btn">page3</a>
+        <a href="{{ site.github.page3 }}" class="btn">page4</a>
      {% endif %}
      
      {% if site.show_downloads %}
         <a href="{{ site.github.page.2 }}" class="btn">Download .page.2</a>
         <a href="{{ site.github.page.3 }}" class="btn">Download .page.3</a>
+        <a href="{{ site.github.page.3 }}" class="btn">Download .page.4</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
