--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.baseurl }}" class="btn">Home</a>
-        <a href="{{ site.github.page2 }}" class="btn">Grammar</a>
-        <a href="{{ site.github.page3 }}" class="btn">Vocabulary</a>
+        <a href="{{ site.github.page2 }}" class="btn">grammar</a>
+        <a href="{{ site.github.page3 }}" class="btn">vocabulary</a>
         <a href="{{ site.github.page4 }}" class="btn">page4</a>
      {% endif %}
      
