--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,15 @@ border: 1px solid red;
     background-color: #159957;
     background-image: linear-gradient(120deg, #1c2960, #ff0000);
 }
+.btn2 {
+  border-radius: 4px;
+  background-color:#3a6186;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px;
+  width: auto;
+  cursor: pointer;
+  margin: 5px;
+}
